Update placeholder page with icon and some HTML boilerplate.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Lime3DS Emulator</h1>
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lime 3DS</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+    <h1>Lime 3DS Emulator</h1>
+    <p>Sorry, this area is under construction! Please check again soon.</p>
+</body>
+</html>
