Add stylesheet and dark mode.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lime 3DS</title>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet", href="styles.css">
 </head>
 <body>
     <h1>Lime 3DS Emulator</h1>
