--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <title>Lime 3DS</title>
 
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Lime3DS/lime3ds.github.io/main/favicon.ico">
-    
-    <link rel="stylesheet" href="https://lime3ds.github.io/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lime 3DS Emulator</h1>
+
+    <hr>
+
+    <div id="link_tray">
+        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+        <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
+        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+    </div>
+
+    <hr>
+
     <p>Sorry, this area is under construction! Please check again soon.</p>
 </body>
 </html>
