--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lime 3DS</title>
-
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Lime3DS/lime3ds.github.io/main/favicon.ico">
-    <link rel="stylesheet" href="https://lime3ds.github.io/styles.css">
-</head>
-<body>
-    <h1>Lime 3DS Emulator</h1>
-
-    <hr>
-
-    <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
-        <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lime3DS</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="app">
+      
     </div>
-
-    <hr>
-
-    <p>Sorry, this area is under construction! Please check again soon.</p>
-</body>
+    <script type="module" src="/index.js"></script>
+  </body>
 </html>
