--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lime3DS</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app">
-      
+
     </div>
     <script type="module" src="/index.js"></script>
   </body>
