--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="app">
-
+      
     </div>
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
