WIP: Building from Source Wiki

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
   </head>
   <body>
     <div id="app">
-      
+      <div class="alert-bar">
+        <h3>Lime3DS is officially out! Get the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Latest Release!</a></h3>
+      </div>
+      <div class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pages/wiki.html">Wiki</a></li>
+          <li><a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a></li>
+          <li><a href="https://github.com/Lime3DS/Lime3DS">Github</a></li>
+          <li><a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a></li>
+        </ul>
+      </div>
+      <h1>Lime3DS</h1>
+      <div class="background-image">
+        <img src="favicon.ico">
+      </div>
     </div>
     <script type="module" src="index.js"></script>
   </body>
