--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -31,11 +31,15 @@
             <ul>
                 <li>Building from Source</li>
                 <ul>
-                    <li><a href="building/windows.html">Windows</a></li>
-                    <li>MacOS</li>
+                    <li>Windows</li>
+                    <ul>
+                        <li><a href="building/windows-gui.html">CMake GUI</a></li>
+                        <li><a href="building/windows-msys.html">MSYS2</a></li>
+                    </ul>
+                    <li><a href="building/macos.html">MacOS</a></li>
                     <li>Linux</li>
-                    <li>Android</li>
-                    <li>OpenBSD</li>
+                    <li><a href="building/android.html">Android</a></li>
+                    <li><a href="building/openbsd.html">OpenBSD</li>
                 </ul>
             </ul>
         </div>
