--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lime 3DS</title>
 
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Lime3DS/lime3ds.github.io/main/favicon.ico">
-    <link rel="stylesheet" href="https://lime3ds.github.io/styles.css">
+    <style>
+        #header {
+            background: linear-gradient(to bottom right, lime, blue);
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        #box {
+            background: linear-gradient(to bottom right, lime, blue);
+            color: white;
+            text-align: center;
+            padding: 20px;
+            border-radius: 20px;
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Lime 3DS Emulator</h1>
+    <div id="header">
+        <h1>Lime 3DS</h1>
+    </div>
 
     <hr>
 
@@ -20,6 +37,10 @@
     </div>
 
     <hr>
+
+    <div id="box">
+        <h2>Lime 3DS</h2>
+    </div>
 
     <p>Sorry, this area is under construction! Please check again soon.</p>
 </body>
