--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>Lime 3DS</title>
 
     <style>
+        body {
+            background-color: #333333;
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+
         #header {
-            background: linear-gradient(to bottom right, lime, blue);
+            background-color: #222222;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
+            width: 100vw;
+            margin: 0;
         }
 
         #box {
