--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <style>
         body {
-            background-color: #333333;
+            background-color: #111111;
             color: white;
             margin: 0;
             padding: 0;
+            font-family: 'Roboto', sans-serif;
         }
 
         #header {
@@ -20,6 +21,24 @@
             padding: 10px;
             width: 100vw;
             margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: calc(100vh / 1.5);
+        }
+
+        #header h1 {
+            margin: 0;
+        }
+
+        #link_tray {
+            text-align: center;
+        }
+
+        #link_tray a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
         }
 
         #box {
@@ -31,18 +50,22 @@
             margin: 20px;
         }
     </style>
+
+    <!-- Google Fonts Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="header">
-        <h1>Lime 3DS</h1>
-    </div>
-
-    <hr>
-
-    <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
-        <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+        <div>
+            <h1>Lime 3DS</h1>
+        </div>
+        <div id="link_tray">
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+            <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+        </div>
     </div>
 
     <hr>
