--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: calc(100vh / 1.5);
         }
 
         #header h1 {
             margin: 0;
+            flex: 2;
         }
 
         #link_tray {
             text-align: center;
+            flex: 1;
         }
 
         #link_tray a {
@@ -51,7 +52,6 @@
         }
     </style>
 
-    <!-- Google Fonts Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
