--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: #222222;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             width: 100vw;
             margin: 0;
             display: flex;
@@ -28,12 +28,12 @@
 
         #header h1 {
             margin: 0;
-            flex: 2;
+            margin-bottom: 10px; /* Added spacing between title and social links */
         }
 
         #link_tray {
             text-align: center;
-            flex: 1;
+            margin-top: 10px; /* Added spacing between title and social links */
         }
 
         #link_tray a {
@@ -44,6 +44,15 @@
 
         #box {
             background: linear-gradient(to bottom right, lime, blue);
+            color: white;
+            text-align: center;
+            padding: 20px;
+            border-radius: 20px;
+            margin: 20px;
+        }
+
+        #lighter_box {
+            background-color: #333333;
             color: white;
             text-align: center;
             padding: 20px;
@@ -74,6 +83,8 @@
         <h2>Lime 3DS</h2>
     </div>
 
-    <p>Sorry, this area is under construction! Please check again soon.</p>
+    <div id="lighter_box">
+        <p>Sorry, this area is under construction! Please check again soon.</p>
+    </div>
 </body>
 </html>
