--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            align-items: center; /* Center horizontally */
         }
 
         #header h1 {
             margin: 0;
-            margin-bottom: 10px; /* Added spacing between title and social links */
+            margin-bottom: 10px;
         }
 
         #link_tray {
             text-align: center;
-            margin-top: 10px; /* Added spacing between title and social links */
+            margin-top: 10px;
         }
 
         #link_tray a {
@@ -49,10 +50,11 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
+            height: 130%; /* 22% taller */
         }
 
         #lighter_box {
-            background-color: #333333;
+            background-color: #222222; /* Same color as header */
             color: white;
             text-align: center;
             padding: 20px;
@@ -76,8 +78,6 @@
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
     </div>
-
-    <hr>
 
     <div id="box">
         <h2>Lime 3DS</h2>
