--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             background-color: #222222;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
             width: 100vw;
             margin: 0;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            align-items: center; /* Center horizontally */
+            align-items: center;
+            height: 80px;
         }
 
         #header h1 {
@@ -50,11 +51,11 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 130%; /* 22% taller */
+            height: 122%;
         }
 
         #lighter_box {
-            background-color: #222222; /* Same color as header */
+            background-color: #222222;
             color: white;
             text-align: center;
             padding: 20px;
