--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 122%;
+            height: 136%; /* 22% taller */
         }
 
         #lighter_box {
