--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
             background-color: #222222;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             width: 100vw;
             margin: 0;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            height: 80px;
         }
 
         #header h1 {
-            margin: 0;
-            margin-bottom: 10px;
+            margin: 10px 0 5px 0;
         }
 
         #link_tray {
             text-align: center;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         #link_tray a {
@@ -51,7 +49,7 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 136%; /* 22% taller */
+            height: 130px;
         }
 
         #lighter_box {
@@ -61,6 +59,7 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
+            height: 220px;
         }
     </style>
 
@@ -70,10 +69,10 @@
 </head>
 <body>
     <div id="header">
-        <div>
+        <div style="margin: 0 20px;">
             <h1>Lime 3DS</h1>
         </div>
-        <div id="link_tray">
+        <div id="link_tray" style="margin: 0 20px;">
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
