--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         }
 
         #header h1 {
-            margin: 10px 0 5px 0;
+            margin: 0;
+            margin-bottom: 5px;
         }
 
         #link_tray {
@@ -50,6 +51,7 @@
             border-radius: 20px;
             margin: 20px;
             height: 130px;
+            line-height: 130px; /* Center text vertically */
         }
 
         #lighter_box {
