--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         #header h1 {
             margin: 0;
             margin-bottom: 5px;
+            text-align: center; /* Center horizontally */
         }
 
         #link_tray {
@@ -57,7 +58,7 @@
         #lighter_box {
             background-color: #222222;
             color: white;
-            text-align: center;
+            text-align: left; /* Align text to the left */
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
