--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         #header h1 {
             margin: 0;
             margin-bottom: 5px;
-            text-align: center; /* Center horizontally */
+            text-align: center;
         }
 
         #link_tray {
@@ -52,13 +52,13 @@
             border-radius: 20px;
             margin: 20px;
             height: 130px;
-            line-height: 130px; /* Center text vertically */
+            line-height: 130px;
         }
 
         #lighter_box {
             background-color: #222222;
             color: white;
-            text-align: left; /* Align text to the left */
+            text-align: left;
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
