--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             color: white;
             text-decoration: none;
             margin: 0 10px;
+            display: inline-block;
+            vertical-align: middle;
         }
 
         #box {
