--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         }
 
         #header h1 {
-            margin: 0;
-            text-align: center;
+             margin: 0;
+             margin-bottom: 5px;
         }
 
         #link_tray {
-            text-align: center;
-            margin-top: 10px;
+            margin: 0;
+            margin-top: 5px;
         }
 
         #link_tray a {
