--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             color: white;
             text-align: center;
             padding: 20px;
+            padding-right: 20px;
             width: 100vw;
             margin: 0;
             display: flex;
