--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
         }
 
         #header h1 {
-             margin: 0;
-             margin-bottom: 5px;
+            margin: 0;
+            margin-bottom: 5px;
+            padding: 0;
         }
 
         #link_tray {
             margin: 0;
             margin-top: 5px;
+            padding: 0;
         }
 
         #link_tray a {
