--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             color: white;
             text-align: center;
             padding: 20px;
-            padding-right: 20px;
             width: 100vw;
             margin: 0;
             display: flex;
@@ -29,23 +28,18 @@
         }
 
         #header h1 {
-            margin: 0;
-            margin-bottom: 5px;
-            padding: 0;
+            margin: 10px 0 5px 0;
         }
 
         #link_tray {
-            margin: 0;
+            text-align: center;
             margin-top: 5px;
-            padding: 0;
         }
 
         #link_tray a {
             color: white;
             text-decoration: none;
             margin: 0 10px;
-            display: inline-block;
-            vertical-align: middle;
         }
 
         #box {
@@ -55,17 +49,16 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 80px;
+            height: 200px;
         }
 
         #lighter_box {
             background-color: #222222;
             color: white;
-            text-align: left;
+            text-align: center;
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 220px;
         }
     </style>
 
