--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
             background-color: #222222;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
             width: 100vw;
             margin: 0;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
+            height: 80px;
         }
 
         #header h1 {
-            margin: 10px 0 5px 0;
+            margin: 0;
+            margin-bottom: 10px;
         }
 
         #link_tray {
             text-align: center;
-            margin-top: 5px;
+            margin-top: 10px;
         }
 
         #link_tray a {
@@ -49,7 +51,6 @@
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
-            height: 200px;
         }
 
         #lighter_box {
@@ -68,10 +69,10 @@
 </head>
 <body>
     <div id="header">
-        <div style="margin: 0 20px;">
+        <div>
             <h1>Lime 3DS</h1>
         </div>
-        <div id="link_tray" style="margin: 0 20px;">
+        <div id="link_tray">
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
