--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         #header h1 {
             margin: 0;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         #link_tray {
             text-align: center;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         #link_tray a {
@@ -56,7 +56,7 @@
         #lighter_box {
             background-color: #222222;
             color: white;
-            text-align: center;
+            text-align: left;
             padding: 20px;
             border-radius: 20px;
             margin: 20px;
