--- a/index.html
+++ b/index.html
@@ -4,7 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lime 3DS</title>
-    <link href="styles.css" rel="stylesheet">
+
+    <style>
+        body {
+            background-color: #111111;
+            color: white;
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        #header {
+            background-color: #222222;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            width: 100vw;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            height: 65px;
+        }
+
+        #header h1 {
+            margin: 0;
+            margin-bottom: 5px;
+        }
+
+        #link_tray {
+            text-align: center;
+            margin-top: 5px;
+        }
+
+        #link_tray a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        #box {
+            background: linear-gradient(to bottom right, lime, blue);
+            color: white;
+            text-align: center;
+            padding: 20px;
+            border-radius: 20px;
+            margin: 20px;
+        }
+
+        #lighter_box {
+            background-color: #222222;
+            color: white;
+            text-align: left;
+            padding: 20px;
+            border-radius: 20px;
+            margin: 20px;
+        }
+
+        h3 {
+            position: relative;
+            font-size: 1.5em;
+            font-weight: bold;
+            margin-bottom: 0.5em;
+        }
+
+        h3::after {
+            content: '';
+            display: block;
+            width: 40%;
+            height: 2px;
+            background-color: #999999;
+            position: absolute;
+            bottom: -0.5em;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    </style>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -26,6 +103,13 @@
     </div>
 
     <div id="lighter_box">
+        <h3>About</h3>
+        <p>Sorry, this area is under construction! Please check again soon.</p>
+        <h3>FAQ</h3>
+        <p>Sorry, this area is under construction! Please check again soon.</p>
+        <h3>Todo</h3>
+        <p>Sorry, this area is under construction! Please check again soon.</p>
+        <h3>Wiki</h3>
         <p>Sorry, this area is under construction! Please check again soon.</p>
     </div>
 </body>
