--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
             margin: 20px;
         }
 
+        /* Style for lines under h3 titles */
         h3 {
             position: relative;
             font-size: 1.5em;
             font-weight: bold;
-            margin-bottom: 1.5em;
+            margin-bottom: 0.5em;
         }
 
         h3::after {
@@ -78,6 +79,10 @@
             position: absolute;
             bottom: -0.5em;
             left: 0;
+        }
+
+        p {
+            margin-top: 0.5em;
         }
     </style>
 
