--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <p>Sorry, this area is under construction! Please check again soon.</p>
         
         <h3>Wiki</h3>
-        <p>Sorry, this area is under construction! Please check again soon.</p>
+        <p style="margin-bottom: 0em;">Sorry, this area is under construction! Please check again soon.</p>
     </div>
 </body>
 </html>
