--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             margin: 20px;
         }
 
-        #lighter_box {
+        #content {
             background-color: #222222;
             color: white;
             text-align: left;
@@ -106,8 +106,8 @@
         <h2>Lime 3DS</h2>
     </div>
 
-    <div id="lighter_box">
-        <h3>About</h3>
+    <div id="content">
+        <h3 style="margin-top: 0em;">About</h3>
         <p>Sorry, this area is under construction! Please check again soon.</p>
         
         <h3>FAQ</h3>
