--- a/index.html
+++ b/index.html
@@ -4,88 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lime 3DS</title>
-
-    <style>
-        body {
-            background-color: #111111;
-            color: white;
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        #header {
-            background-color: #222222;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            width: 100vw;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            height: 65px;
-        }
-
-        #header h1 {
-            margin: 0;
-            margin-bottom: 5px;
-        }
-
-        #link_tray {
-            text-align: center;
-            margin-top: 5px;
-        }
-
-        #link_tray a {
-            color: white;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        #box {
-            background: linear-gradient(to bottom right, lime, blue);
-            color: white;
-            text-align: center;
-            padding: 20px;
-            border-radius: 20px;
-            margin: 20px;
-        }
-
-        #content {
-            background-color: #222222;
-            color: white;
-            text-align: left;
-            padding: 20px;
-            border-radius: 20px;
-            margin: 20px;
-        }
-
-        h3 {
-            position: relative;
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 0.5em;
-        }
-
-        h3::after {
-            content: '';
-            display: block;
-            width: 80%;
-            height: 1px;
-            background-color: #999999;
-            position: absolute;
-            bottom: -0.5em;
-            left: 0;
-        }
-
-        p {
-            margin-top: 1.66em;
-            margin-bottom: 3.25em;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
