almost done with wiki

--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -37,7 +37,7 @@
                         <li><a href="building/windows-msys.html">MSYS2</a></li>
                     </ul>
                     <li><a href="building/macos.html">MacOS</a></li>
-                    <li>Linux</li>
+                    <li><a href="building/linux.html">Linux</a></li>
                     <li><a href="building/android.html">Android</a></li>
                     <li><a href="building/openbsd.html">OpenBSD</li>
                 </ul>
