--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="box">
-        <h2>Lime 3DS</h2>
+        <h2>"The future of 3DS emulation"</h2>
     </div>
 
     <div id="content">
