--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body>
     <div id="header">
-        <div>
-            <h1>Lime 3DS</h1>
-        </div>
         <div id="link_tray">
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
@@ -22,7 +19,8 @@
     </div>
 
     <div id="box">
-        <h2>"The future of 3DS emulation"</h2>
+        <h2>Lime 3DS</h2>
+        <img src="lime3ds.jpeg">
     </div>
 
     <div id="content">
