--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="box">
         <h2>Lime 3DS</h2>
-        <img src="lime3ds.jpeg">
+        <img src="lime.svg">
     </div>
 
     <div id="content">
