--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 65px;
+    height: 38px;
 }
 
 #header h1 {
@@ -37,6 +37,7 @@
 }
 
 #link_tray {
+    vertical-align: center;
     text-align: center;
     margin-top: 5px;
 }
@@ -54,6 +55,10 @@
     padding: 20px;
     border-radius: 20px;
     margin: 20px;
+}
+
+.box-img {
+    width: 25px;
 }
 
 #content {
