--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ p {
 
     <div id="box">
         <h2>Lime 3DS</h2>
-        <img src="lime.svg">
+        <img class="box-img" src="lime.svg">
     </div>
 
     <div id="content">
