--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
     padding: 20px;
     border-radius: 20px;
     margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .box-img {
     width: 35px;
+    margin-left: 10px; /* Adjust this value as needed */
 }
 
 #content {
@@ -104,7 +108,7 @@ p {
     </div>
 
     <div id="box">
-        <h2>Lime 3DS</h2>
+        <span style="margin-right: 10px;">Lime 3DS</span>
         <img class="box-img" src="lime.svg">
     </div>
 
