--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@ p {
     margin-top: 1.66em;
     margin-bottom: 3.25em;
 }
+
+/* Adjust h2 display property */
+#box h2 {
+    display: inline; /* Display as inline element */
+    margin-right: 10px; /* Adjust spacing */
+}
     </style>
 </head>
 <body>
@@ -108,7 +114,7 @@ p {
     </div>
 
     <div id="box">
-        <span style="margin-right: 10px;">Lime 3DS</span>
+        <h2>Lime 3DS</h2>
         <img class="box-img" src="lime.svg">
     </div>
 
