--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
 
   <div id="box">
     <img class="box-img" src="lime.svg">
-    <h2>Lime 3DS</h2>
+    <h2>Lime3DS</h2>
   </div>
 
   <div id="content">
     <h3 id="about" style="margin-top: 0em;">About</h3>
-    <p>Sorry, this area is under construction! Please check again soon.</p>
+    <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
     
     <h3 id="faq">FAQ</h3>
-    <p>Sorry, this area is under construction! Please check again soon.</p>
+    <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
+    <p>"Why won't Lime launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p><br>
+    <p>"Why does Lime keep crashing?"<br>One of the most common reasons for Lime crashing is insufficient and/or unsupported hardware. 5GB+ of RAM is recommended in order to properly run Lime3DS.</p><br>
+    <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
     
     <h3 id="todo">To do</h3>
     <p>Sorry, this area is under construction! Please check again soon.</p>
