--- a/public/pages/building/macos.html
+++ b/public/pages/building/macos.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../wiki.css">
 
-    <style>
-        body {
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/bash.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </head>
 
 <body>
@@ -47,25 +46,26 @@
             <div class="content">
                 <h1>Building for MacOS</h1>
                 <h2>What you will need:</h2>
-                <ul class="dependencies">
-                    <li class="dependencies"><a href="https://cmake.org">CMake</a>(<code>brew install cmake</code>)</li>
-                    <li class="dependencies">A recent version of Xcode and the Xcode command line tools</li>
+                <ul>
+                    <li><a href="https://cmake.org">CMake</a> (<code>brew install cmake</code>)</li>
+                    <li>A recent version of Xcode and the Xcode command line tools</li>
                 </ul>
-                <br>
-                <h1 style="padding-top: 20px;">Cloning Lime3DS</h1>
-                <pre>
-                    <code class="code-float">git clone --recursive https://github.com/Lime3DS/Lime3DS</code> <br>
-                    <code class="code-float">cd Lime3DS</code>
+                <h1>Cloning Lime3DS</h1>
+                <pre style="width: 500px;">
+                    <code class="language-bash">
+    git clone --recursive https://github.com/Lime3DS/Lime3DS
+    cd Lime3DS
+                    </code>
                 </pre>
                 <h1>Building</h1>
-                <ul class="dependencies">
-                    <li class="dependencies">Make the build directory: <code>mkdir build && cd build</code></li>
-                    <li class="dependencies">Make CMake files: <code>cmake ..</code></li>
+                <ul>
+                    <li>Make the build directory: <code>mkdir build && cd build</code></li>
+                    <li>Make CMake files: <code>cmake ..</code></li>
                     <ul>
                         <li>Apple Silicon - arm64 to x86_64: <code>cmake .. -DCMAKE_OSX_ARCHITECTURES="arm64"</code></li>
                         <li>Apple Silicon - x86_64 to arm64: <code>cmake .. -DCMAKE_OSX_ARCHITECTURES="x86_64"</code></li>
                     </ul>
-                    <li class="dependencies">Make executable: <code>make -j4</code></li>
+                    <li>Make executable: <code>make -j4</code></li>
                     <ul>
                         <li>Make a distributable executable with: <code>make bundle</code></li>
                     </ul>
