--- a/public/pages/building/windows-gui.html
+++ b/public/pages/building/windows-gui.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../wiki.css">
 
-    <style>
-        body {
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/bash.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </head>
 
 <body>
@@ -47,32 +46,34 @@
             <div class="content">
                 <h1>Building for Windows</h1>
                 <h3>What you need:</h3>
-                <ul class="dependencies">
-                    <li class="dependencies"><a href="https://visualstudio.microsoft.com/">Visual Studio 2022 (Select C++ Support)</a></li>
-                    <li class="dependencies"><a href="https://cmake.org">CMake</a></li>
-                    <li class="dependencies"><a href="https://gitforwindows.org/">Git for Windows</a></li>
-                    <ul class="dependencies">
-                        <li class="dependencies">Make sure to select “Git from the command line and also from 3rd-party software”
+                <ul>
+                    <li><a href="https://visualstudio.microsoft.com/">Visual Studio 2022 (Select C++ Support)</a></li>
+                    <li><a href="https://cmake.org">CMake</a></li>
+                    <li><a href="https://gitforwindows.org/">Git for Windows</a></li>
+                    <ul>
+                        <li>Make sure to select “Git from the command line and also from 3rd-party software”
                         </li>
                     </ul>
                 </ul>
-                <h1 style="padding-top: 100px;">Cloning Lime3DS</h1>
-                <pre>
-                        <code class="code-float">git clone --recursive https://github.com/Lime3DS/Lime3DS</code> <br>
-                        <code class="code-float">cd Lime3DS</code>
+                <h1>Cloning Lime3DS</h1>
+                <pre style="width: 500px;">
+                    <code class="language-bash">
+    git clone --recursive https://github.com/Lime3DS/Lime3DS
+    cd Lime3DS
+                    </code>
                 </pre>
                 <h1>Building</h1>
-                <ul class="dependencies">
-                    <li class="dependencies">Open the CMake GUI Application and point it to the Lime3DS directory</li>
-                    <li class="dependencies">Use the preexisting <code>build/</code> directory or tell CMake to make one</li>
-                    <li class="dependencies">Click the configure button and choose <code>Visual Studio 17 2022</code> with
+                <ul>
+                    <li>Open the CMake GUI Application and point it to the Lime3DS directory</li>
+                    <li>Use the preexisting <code>build/</code> directory or tell CMake to make one</li>
+                    <li>Click the configure button and choose <code>Visual Studio 17 2022</code> with
                         <code>x64</code> for the optional platform</li>
-                    <ul class="dependencies">
-                        <li class="dependencies">If you get errors like "XXX does not contain a CMakeLists.txt file", it means you
+                    <ul>
+                        <li>If you get errors like "XXX does not contain a CMakeLists.txt file", it means you
                             did not use the <code>--recursive</code> flag when cloning the repo. Please run
                             <code>git submodule update --init --recursive</code> to get the submodules</li>
                     </ul>
-                    <li class="dependencies">Click Generate to create the project files</li>
+                    <li>Click Generate to create the project files</li>
                     <li>Open the solution file in Visual Studio 2022, which is located in the build folder</li>
                     <li>Depending on which frontend (SDL2 or Qt) you want to build or run, select "lime" or "lime-qt" in the
                         Solution Explorer, right click and "Set as Starup Project"</li>
