fixed CSS issues

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
   </div>
 
   <div id="content">
-    <h3 id="about" style="margin-top: 0em;">About</h3>
+    <h3 class="index-h3" id="about" style="margin-top: 0em;">About</h3>
     <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
     
-    <h3 id="faq">FAQ</h3>
+    <h3 class="index-h3" id="faq">FAQ</h3>
     <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
     <p>"Why won't Lime launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
     <p>"Why does Lime keep crashing?"<br>One of the most common reasons for Lime crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
@@ -201,7 +201,7 @@ CPU: AArch64. Snapdragon 835 SoC or better.
 GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p>
     <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
     
-    <h3 id="todo">To do</h3>
+    <h3 class="index-h3" id="todo">To do</h3>
     <p>Sorry, this area is under construction! Please check again soon.</p>
   </div>
 </body>
