--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -12,39 +12,39 @@
 
 <body>
     <div id="app">
-        <div class="alert-bar">
-            <h3>Lime3DS is officially out! Get the <a
-                    href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Latest Release!</a></h3>
+      <div id="header">
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <a href="../index.html">Home</a>
+            <a href="./wiki.html">Wiki</a>
+          </div>
         </div>
-        <div class="navbar">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./wiki.html">Wiki</a></li>
-                <li><a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a></li>
-                <li><a href="https://github.com/Lime3DS/Lime3DS">Github</a></li>
-                <li><a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a></li>
-            </ul>
+        <div id="link_tray">
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+            <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
-        
-        <div class="table-of-contents">
-            <h2>Table of Contents</h2>
-            <ul>
-                <li>Building from Source</li>
-                <ul>
-                    <li>Windows</li>
-                    <ul>
-                        <li><a href="building/windows-gui.html">CMake GUI</a></li>
-                        <li><a href="building/windows-msys.html">MSYS2</a></li>
-                    </ul>
-                    <li><a href="building/macos.html">MacOS</a></li>
-                    <li><a href="building/linux.html">Linux</a></li>
-                    <li><a href="building/android.html">Android</a></li>
-                    <li><a href="building/openbsd.html">OpenBSD</li>
-                </ul>
-            </ul>
-        </div>
-    </div>
-    <script type="module" src="index.js"></script>
+      </div>
+      
+      <div class="table-of-contents">
+        <h2>Table of Contents</h2>
+        <ul>
+          <li>Building from Source</li>
+          <ul>
+           <li>Windows</li>
+           <ul>
+             <li><a href="building/windows-gui.html">CMake GUI</a></li>
+             <li><a href="building/windows-msys.html">MSYS2</a></li>
+           </ul>
+           <li><a href="building/macos.html">MacOS</a></li>
+           <li><a href="building/linux.html">Linux</a></li>
+           <li><a href="building/android.html">Android</a></li>
+           <li><a href="building/openbsd.html">OpenBSD</li>
+         </ul>
+       </ul>
+     </div>
+   </div>
+   <script type="module" src="index.js"></script>
 </body>
-
 </html>
