I fucking hate this

--- a/public/pages/building/android.html
+++ b/public/pages/building/android.html
@@ -1,6 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="../../favicon.ico" />
@@ -18,10 +17,6 @@
 
 <body>
     <div id="app">
-        <div class="alert-bar">
-            <h3>Lime3DS is officially out! Get the <a
-                    href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Latest Release!</a></h3>
-        </div>
         <div class="navbar">
             <ul>
                 <li><a href="../../index.html">Home</a></li>
@@ -29,18 +24,6 @@
                 <li><a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a></li>
                 <li><a href="https://github.com/Lime3DS/Lime3DS">Github</a></li>
                 <li><a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a></li>
-            </ul>
-        </div>
-        
-        <div class="table-of-contents">
-            <h2>Table of Contents</h2>
-            <ul>
-                <li>Building from Source</li>
-                <ul>
-                    <li>Building for MacOS</li>
-                    <li>Cloning Lime3DS</li>
-                    <li>Building</li>
-                </ul>
             </ul>
         </div>
         <div class="wiki-content">
