--- a/public/pages/building/android.html
+++ b/public/pages/building/android.html
@@ -17,15 +17,20 @@
 
 <body>
     <div id="app">
-        <div class="navbar">
-            <ul>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="../wiki.html">Wiki</a></li>
-                <li><a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a></li>
-                <li><a href="https://github.com/Lime3DS/Lime3DS">Github</a></li>
-                <li><a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a></li>
-            </ul>
+      <div id="header">
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <a href="../index.html">Home</a>
+            <a href="./wiki.html">Wiki</a>
+          </div>
         </div>
+        <div id="link_tray">
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+            <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
+            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+        </div>
+      </div>
         <div class="wiki-content">
             <div class="content">
                 <h1>Building for Android</h1>
