--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="wiki.css">
 </head>
 <body>
+    <div id="app">
       <div id="header">
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
@@ -23,7 +24,24 @@
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
       </div>
-      
+      <div class="table-of-contents">
+        <h2>Table of Contents</h2>
+        <ul>
+          <li>Building from Source</li>
+          <ul>
+           <li>Windows</li>
+           <ul>
+             <li><a href="building/windows-gui.html">CMake GUI</a></li>
+             <li><a href="building/windows-msys.html">MSYS2</a></li>
+           </ul>
+           <li><a href="building/macos.html">MacOS</a></li>
+           <li><a href="building/linux.html">Linux</a></li>
+           <li><a href="building/android.html">Android</a></li>
+           <li><a href="building/openbsd.html">OpenBSD</li>
+         </ul>
+       </ul>
+      </div>
+    </div>
    <script type="module" src="index.js"></script>
 </body>
 </html>
