--- a/public/pages/building/macos.html
+++ b/public/pages/building/macos.html
@@ -21,8 +21,8 @@
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
-            <a href="../index.html">Home</a>
-            <a href="./wiki.html">Wiki</a>
+            <a href=".../index.html">Home</a>
+            <a href="../wiki.html">Wiki</a>
           </div>
         </div>
         <div id="link_tray">
