--- a/public/pages/building/linux.html
+++ b/public/pages/building/linux.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
-            <a href="./../index.html">Home</a>
+            <a href="../../index.html">Home</a>
             <a href="../wiki.html">Wiki</a>
           </div>
         </div>
