--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -43,5 +43,8 @@
       </div>
     </div>
    <script type="module" src="index.js"></script>
+    <div id="msgbox">
+      <h3>Lime3DS is officially released! Check out <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
+    </div>
 </body>
 </html>
