--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -42,7 +42,7 @@
        </ul>
       </div>
       <div id="msgbox">
-        <h3>Lime3DS is officially released! Check out <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
+        <h3>Lime3DS is officially released! Check out </h3><h3><a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
       </div>
     </div>
    <script type="module" src="index.js"></script>
