--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -41,8 +41,12 @@
          </ul>
        </ul>
       </div>
-      <div id="msgbox">
-        <h3>Lime3DS is officially released! Check out <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
+      <div class="wiki-content">
+        <div class="content">
+          <div id="msgbox">
+            <h3>Lime3DS is officially released! Check out <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
+          </div>
+        </div>
       </div>
     </div>
    <script type="module" src="index.js"></script>
