Made site desktop friendly

--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -23,6 +23,7 @@
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
+        <img class="lime-logo" src="../lime.svg" width="45px">
       </div>
       <div class="table-of-contents">
         <h2>Table of Contents</h2>
@@ -40,9 +41,6 @@
            <li><a href="building/openbsd.html">OpenBSD</a></li>
          </ul>
        </ul>
-      </div>
-      <div id="msgbox">
-        <h3>Lime3DS is officially released! Check out <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Github Releases!</a></h3>
       </div>
     </div>
    <script type="module" src="index.js"></script>
