--- a/public/pages/building/linux.html
+++ b/public/pages/building/linux.html
@@ -30,6 +30,7 @@
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
+        <img class="lime-logo" src="../../lime.svg" width="45px">
       </div> 
         <div class="wiki-content">
             <div class="content">
