--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -42,6 +42,14 @@
          </ul>
        </ul>
       </div>
+      <div class="wiki-main-page">
+        <div class="content">
+          <h1>FAQ</h1>
+          <h3>"Why is it saying a source directory doesnt contain a CMakeLists.txt file?"</h3>
+          <p>This means that the subdirectories werent pulled with the repo. Run <code>git submodule update --init --recursive</code></p>
+          <h3>"Placeholder Question"</h3>
+        </div>
+      </div>
     </div>
    <script type="module" src="index.js"></script>
 </body>
