--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
     <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
     <p>"Why won't Lime launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
     <p>"Why does Lime keep crashing?"<br>One of the most common reasons for Lime crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
-    <p>What are the minimum specs to run Lime on my device?"<br>Desktop PC:
-Operating System: Windows 10/11 (64-bit), MacOS Big Sur, or modern 64-bit Linux.
+    <p>What are the minimum specs to run Lime on my device?"<br>PC: <br>
+Operating System: Windows 10/11 (64-bit), MacOS Big Sur, or modern 64-bit Linux. <br>
 
-CPU: x68-64 (64-bit) CPU. Single core performance higher than 1,800 on Passmark.
+CPU: x68-64 (64-bit) CPU. Single core performance higher than 1,800 on Passmark. <br>
 
-GPU: OpenGL 4.3 or Vulkan 1.1 support.
+GPU: OpenGL 4.3 or Vulkan 1.1 support. <br>
 
-Ram: 2GB of free RAM. 4GB is recommended.
+Ram: 2GB of free RAM. 4GB is recommended. <br> <br>
 
-Android:
-Operating System: Android 9.0+.
-CPU: AArch64. Snapdragon 835 SoC or better.
-GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p>
+Android: <br>
+Operating System: Android 9.0+. <br>
+CPU: AArch64. Snapdragon 835 SoC or better. <br>
+GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p> <br>
     <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
     
     <h3 class="index-h3" id="todo">To do</h3>
