--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p> <br>
     
     <h3 class="index-h3" id="todo">To do</h3>
     <p>Sorry, this area is under construction! Please check again soon.</p>
+    <p>Site Created by <a href="https://limegradient.xyz/">LimeGradient</a> and <a href="https://github.com/LutraVibes">LutraVibes</a></p>
   </div>
 </body>
 </html>
