--- a/public/pages/building/windows-gui.html
+++ b/public/pages/building/windows-gui.html
@@ -60,7 +60,7 @@
                         <code>x64</code> for the optional platform</li>
                     <ul>
                         <li>If you get errors like "XXX does not contain a CMakeLists.txt file", it means you
-                            did not use the <code>--recursive</code> flag when cloning the repo. Please run
+                            did not use the <code>--recursive</code> flag when cloning the repo. <br> Please run
                             <code>git submodule update --init --recursive</code> to get the submodules</li>
                     </ul>
                     <li>Click Generate to create the project files</li>
