--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -46,8 +46,9 @@
         <div class="content">
           <h1>FAQ</h1>
           <h3>"Why is it saying a source directory doesnt contain a CMakeLists.txt file?"</h3>
-          <p>This means that the subdirectories werent pulled with the repo. Run <code>git submodule update --init --recursive</code></p>
-          <h3>"Placeholder Question"</h3>
+          <p>This means that the subdirectories weren't pulled with the repo. <br> Run <code>git submodule update --init --recursive</code></p>
+          <h3>"How do I update Lime3DS on 'insert platform here'"</h3>
+          <p>Right now there is no auto-updater for Lime3DS. You need to manually download the latest release.</p>
         </div>
       </div>
     </div>
